Small refactor to this one of the very first projects.